# insight-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/v1/: analytics.py  api_keys.py  auth.py  events.py  health.py
app/core/: config.py  constants.py  exceptions.py  logging.py  security.py
app/db/: base.py  database_url.py  session.py
app/middleware/: request_id.py
app/models/: __init__.py
app/repositories/: analytics_repo.py  api_key_repo.py  event_repo.py  user_repo.py
app/schemas/: analytics.py  api_key.py  auth.py  common.py  event.py
app/services/: analytics_service.py  api_key_service.py  auth_service.py  event_service.py
docker/: Dockerfile  entrypoint.sh
scripts/: create_admin.py  seed_demo_events.py  wait_for_db.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_events.py
